--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -35,3 +35,18 @@ footer {
     background-color: #fff;
     padding: 15px;
 }
+/* add loading efect */
+.loading {
+    animation: pulse 1500ms ease-in-out infinite;
+}
+@keyframes pulse {
+    0% {
+        opacity: 0.4;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.4;
+    }
+}
